# pulse

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: build-server.yml  publish-nest.yml
clients/go/: README.md  go.mod  pulse.go  pulse_test.go
clients/nest/: README.md  package-lock.json  package.json  tsconfig.json
clients/nest/src/: index.test.ts  index.ts
clients/python/: README.md  pyproject.toml
clients/python/pulse/: __init__.py
clients/python/tests/: test_pulse.py
docs/: onboarding.md
kb/: active.md
kb/plans/active/: 0001-pulse-heartbeat-monitoring-primitive.md
server/: .dockerignore  Dockerfile  go.mod  go.sum  main.go  main_test.go
server/internal/api/: api.go  api_test.go  ownership_test.go
server/internal/metrics/: metrics.go  metrics_test.go
server/internal/store/: expire_test.go  meta_test.go  ownership_test.go  store.go  store_test.go
