[project]
name = "pulse-client"
version = "0.1.0"
description = "Python client for the pulse heartbeat / cron-liveness monitor"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.24",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pulse"]
